Added rollover images

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 			   class="hamburger"><i class="fas fa-bars"></i></a>
 			</div>
 		</div>
+		<img src="https://www.jarrodyellets.com/images/contact.png" class="rollover" id="rolloverContact">
+		<img src="https://www.jarrodyellets.com/images/dogpolaroid.png" class="rollover" id="rolloverAbout">
+		<img src="https://www.jarrodyellets.com/images/portfolioPol.png" class="rollover" id="rolloverPortfolio">
 	</div>
 
 	<div class="container-fluid about">
