--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
 				  <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="hvr-pop menu" aria-label="linkedin-icon"><i class="fab fa-linkedin-in" itemprop="linken icon"></i></a>
 				</div>
 				<div class="navLinks">
-					<a href="javascript:void(0)" class="closeBtn"><i class="fas fa-times"></i></a>
+					<a href="javascript:void(0)" class="closeBtn" aria-label="close button"><i class="fas fa-times"></i></a>
 					<a id="about" class="links hvr-pop">About</a>
 					<a id="portfolio" class="links hvr-pop">Portfolio</a>
 					<a id="contact" class="links hvr-pop">Contact</a>
 				</div>
 				<a href="javascript:void(0);" 
-			   class="hamburger"><i class="fas fa-bars"></i></a>
+			   class="hamburger"><i class="fas fa-bars" aria-label="hamburger"></i></a>
 			</div>
 		</div>
-		<img src="https://www.jarrodyellets.com/images/contact.png" class="rollover" id="rolloverContact">
-		<img src="https://www.jarrodyellets.com/images/dogpolaroid.png" class="rollover" id="rolloverAbout">
-		<img src="https://www.jarrodyellets.com/images/portfolioPol.png" class="rollover" id="rolloverPortfolio">
+		<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/contact.png" class="rollover" id="rolloverContact" alt="contact polaroid">
+		<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/dogpolaroid.png" class="rollover" id="rolloverAbout" alt="about polaroid">
+		<img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/portfolioPol.png" class="rollover" id="rolloverPortfolio" alt="portfolio polaroid">
 	</div>
 
 	<div class="container-fluid about">
