--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
 
   <div class="container-fluid about">
-    <h2 class="title">About</h2>
+    <h2 class="title" id="aboutTitle">About</h2>
     <div class"row">
       <div class="col-md-6 section-row aboutRow">
         <h3 class="heading">My Stack</h3>
