--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/index.css">
   <script type="text/javascript" src="assets/js/index.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu|Raleway|Montserrat|Cabin" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu|Raleway|Montserrat|Reenie+Beanie" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="manifest" href="https://www.jarrodyellets.com/manifest.json">
@@ -48,32 +48,36 @@
     <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://www.jarrodyellets.com/images/portfolioPol.png" class="rollover" id="rolloverPortfolio" alt="portfolio polaroid">
   </div>
 
-  <div class="container-fluid about">
-    <h2 class="title" id="aboutTitle">About</h2>
-    <div class"row">
-      <div class="col-md-6 section-row aboutRow">
-        <h3 class="heading">My Stack</h3>
-        <div class="icons">
-          <div class="frontEnd">
-            <i class="devicon-html5-plain-wordmark colored icon" title="html icon"></i>
-            <i class="devicon-css3-plain-wordmark colored icon" title="css icon"></i>
-            <i class="devicon-sass-original colored icon" title="sass icon"></i>
-            <i class="devicon-javascript-plain colored icon" title="javascript icon"></i>
-            <i class="devicon-react-original-wordmark colored icon" title="react icon"></i>
+  <div class="about">
+    <img src="https://www.jarrodyellets.com/images/aboutPaper.png" class="titleImg">
+    <div class="aboutWrapper">
+      <div class="stack">
+        <h3 class="subHeader">Toolbox</h3>
+        <div class="tools">
+          <div class="toolsLeft">
+            <div class="stackText">HTML5</div>
+            <div class="stackText">CSS3</div>
+            <div class="stackText">Sass</div>
+            <div class="stackText">jQuery</div>
+            <div class="stackText">Git</div>
           </div>
-          <div class="backEnd">
-            <i class="devicon-jquery-plain-wordmark colored icon" title="jquery icon"></i>
-            <i class="devicon-nodejs-plain-wordmark colored icon" title="node icon"></i>
-            <i class="devicon-mongodb-plain-wordmark colored icon" title="mongodb icon"></i>
-            <i class="devicon-express-original-wordmark icon" title="express icon"></i>
-            <i class="devicon-git-plain-wordmark colored icon" title="git icon"></i>
+          <div class="toolsRight">
+            <div class="stackText">JavaScript</div>
+            <div class="stackText">React</div>
+            <div class="stackText">Node</div>
+            <div class="stackText">mongoDB</div>
+            <div class="stackText">express.js</div>
           </div>
         </div>
-       </div>
-       <div class="col-md-6 section-row aboutRow" id="about-box">
-         <h3 class="heading">Me</h3>
-         <p class="text">My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium.  I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB.  I have always viewed coding as an art form, thus we should be continuously pushing the boundary while having the end product functional and intuitive.  When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter.</p>
-       </div>
+      </div>
+      <div class="me">
+        <h3 class=subHeader>Who Am I?</h3>
+        <div class="aboutMe">
+          <p class="text">
+           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB. I have always viewed coding as an art form, thus we should be continuously pushing the boundary while having the end product functional and intuitive. When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter. 
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 
