--- a/index.html
+++ b/index.html
@@ -50,8 +50,16 @@
   <div class="about">
     <img src="https://www.jarrodyellets.com/images/aboutPaper.png" class="titleImg">
     <div class="aboutWrapper">
+      <div class="me">
+        <h3 class=subHeader>Who Am I?</h3>
+        <div class="aboutMe">
+          <p class="text">
+           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB. I have always viewed coding as an art form, thus we should be continuously pushing the boundary while having the end product functional and intuitive. When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter. 
+          </p>
+        </div>
+      </div>
       <div class="stack">
-        <h3 class="subHeader">Toolbox</h3>
+        <h3 class="subHeader">What I Use</h3>
         <div class="tools">
           <div class="toolsLeft">
             <div class="stackText">HTML5</div>
@@ -67,14 +75,6 @@
             <div class="stackText">mongoDB</div>
             <div class="stackText">express.js</div>
           </div>
-        </div>
-      </div>
-      <div class="me">
-        <h3 class=subHeader>Who Am I?</h3>
-        <div class="aboutMe">
-          <p class="text">
-           My name is Jarrod Yellets and I am a web developer residing in Brussels, Belgium. I specialize in front-end development with working knowledge of back-end technologies such as node.js, express.js, and mongoDB. I have always viewed coding as an art form, thus we should be continuously pushing the boundary while having the end product functional and intuitive. When I'm not behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padme, or traveling Europe with my wife and daughter. 
-          </p>
         </div>
       </div>
     </div>
@@ -143,7 +143,7 @@
   </div>
 
   <div class="container-fluid contact">
-    <h2 class="title">Contact</h2>
+    <img src="https://www.jarrodyellets.com/images/contactPaper.png" class="titleImg">
     <div class"row">
        <div class="col-sm-6 section-row tweet">
          <p class="text">Fill out the form to submit a question, comment, or to inquire about a future project.  You can also reach me a <a href="mailto:jarrod@jarrodyellets.com">jarrod@jarrodyellets.com</a></p>
