--- a/index.html
+++ b/index.html
@@ -142,35 +142,21 @@
     <div class="divider">~*~*~*~*~*~*~*~*~*~*~*~*~*~</div>
   </div>
 
-  <div class="container-fluid contact">
+  <div class="contact">
     <img src="https://www.jarrodyellets.com/images/contactPaper.png" class="titleImg">
-    <div class"row">
-       <div class="col-sm-6 section-row tweet">
-         <p class="text">Fill out the form to submit a question, comment, or to inquire about a future project.  You can also reach me a <a href="mailto:jarrod@jarrodyellets.com">jarrod@jarrodyellets.com</a></p>
-         <p class="text">Find me at the following places:</p>
-         <div class="menuContact">
-      <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" aria-label="githubIcon"><i class="fab fa-github" itemprop="github icon"></i></a>
-      <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" aria-label="codepenIcon"><i class="fab fa-codepen" itemprop="codepen icon"></i></a>
-      <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" aria-label="twitterIcon"><i class="fab fa-twitter" itemprop="twitter icon"></i></a>
-      <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="hvr-pop menuContact" aria-label="linkenIcon"><i class="fab fa-linkedin-in" itemprop="linken icon"></i></a>
-    </div>
-       </div>
-      <div class="col-sm-6 section-row contactForm">
-        <form method="POST" action="https://formspree.io/jarrod@jarrodyellets.com">
-          <div class="form-group">
-            <label for="name">Name</label>
-              <input type="text" class="form-control input" name="name" id="name" required>
-            <label for="email">Email</label>
-              <input type="email" class="form-control input" name="email" id="email" required>
-            <label for="message">Message</label>
-              <textarea class="form-control input" name="message" id="message" required></textarea>
-            <button type="submit" class="button">Submit</button>
-          </div>
-        </form>
-        </div>
+    <div class="contactWrapper">
+      <div class="text">Find me at the following places:</div>
+      <div class="contactIcons">
+        <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" aria-label="githubIcon"><i class="fab fa-github" itemprop="github icon"></i></a>
+        <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" aria-label="codepenIcon"><i class="fab fa-codepen" itemprop="codepen icon"></i></a>
+        <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" aria-label="twitterIcon"><i class="fab fa-twitter" itemprop="twitter icon"></i></a>
+        <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="hvr-pop menuContact" aria-label="linkenIcon"><i class="fab fa-linkedin-in" itemprop="linken icon"></i></a>
       </div>
-
+      <div class="text">Reach me at:</div>
+      <a href="mailto:jarrod@jarrodyellets.com" target="_blank" rel="noopener" class="contactEmail" aria-label="email">jarrod@jarrodyellets.com</a>
+    </div>
   </div>
+
   <footer>
     <div class="foot">
         <p>&copy; Jarrod Yellets | 2018</p>
