Added contact icons

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
   <div class="contact">
     <img src="https://www.jarrodyellets.com/images/contactPaper.png" class="titleImg">
     <div class="contactWrapper">
-      <div class="text">Find me at the following places:</div>
+      <div class="contactText">Find me at the following places:</div>
       <div class="contactIcons">
-        <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" aria-label="githubIcon"><i class="fab fa-github" itemprop="github icon"></i></a>
-        <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" aria-label="codepenIcon"><i class="fab fa-codepen" itemprop="codepen icon"></i></a>
-        <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="hvr-pop menuContact" aria-label="twitterIcon"><i class="fab fa-twitter" itemprop="twitter icon"></i></a>
-        <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="hvr-pop menuContact" aria-label="linkenIcon"><i class="fab fa-linkedin-in" itemprop="linken icon"></i></a>
+        <a href="https://github.com/jarrodyellets" target="_blank" rel="noopener" class="menuContact" aria-label="githubIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/github.png"></a>
+        <a href="https://codepen.io/jarrodyellets" target="_blank" rel="noopener" class="menuContact" aria-label="codepenIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/codepen.png"></a>
+        <a href="https://twitter.com/jarrodyellets" target="_blank" rel="noopener" class="menuContact" aria-label="twitterIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/twitter.png"></a>
+        <a href="https://www.linkedin.com/in/jarrod-yellets-59509447" target="_blank" rel="noopener" class="menuContact" aria-label="linkenIcon"><img class="contactImage" src="https://www.jarrodyellets.com/images/linkedin.png"></a>
       </div>
-      <div class="text">Reach me at:</div>
+      <div class="contactText">Reach me at:</div>
       <a href="mailto:jarrod@jarrodyellets.com" target="_blank" rel="noopener" class="contactEmail" aria-label="email">jarrod@jarrodyellets.com</a>
     </div>
   </div>
