--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
       <div class="contactText">Reach me at:</div>
       <a href="mailto:jarrod@jarrodyellets.com" target="_blank" rel="noopener" class="contactEmail" aria-label="email">jarrod@jarrodyellets.com</a>
     </div>
+    <img class="arrow" src="https://www.jarrodyellets.com/images/arrow.png">
   </div>
 
   <footer>
