--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
     <div class="portfolioGrid">
       <div class="portfolioItem">
         <img src="https://www.jarrodyellets.com/images/lumbarPol.png" class="portfolioImg">
-        <p class="text">E-commerce site for mattress company, The Lumbar Yard.  Allows users to search and buy mattresses.</p>
+        <p class="text">E-commerce site for mattress company, The Lumbar Yard.  The site allows users to search for and buy mattresses with any major credit card.</p>
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, and Express.js</p>
         <div className="buttonWrapper">
-          <a href="https://thawing-hollows-26630.herokuapp.com/" target="_blank"><button class="btn">Launch!</button></a><a href="https://github.com/jarrodyellets/lumbarYard" target="_blank"><button class="btn">View Code</button></a>
+          <a href="https://thawing-hollows-26630.herokuapp.com/" target="_blank"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/lumbarYard" target="_blank"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
       </div>
       <div class="portfolioItem">
@@ -99,7 +99,7 @@
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, React, Node, Express.js, Google Maps API</p>
         <div className="buttonWrapper">
-          <a href="https://shielded-plains-18488.herokuapp.com/" target="_blank"><button class="btn">Launch!</button></a><a href="https://github.com/jarrodyellets/realEstate" target="_blank"><button class="btn">View Code</button></a>
+          <a href="https://shielded-plains-18488.herokuapp.com/" target="_blank"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/realEstate" target="_blank"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
       </div>
       <div class="portfolioItem">
@@ -108,7 +108,7 @@
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, Bootstrap, JavaScript, and jQuery</p>
         <div className="buttonWrapper">
-          <a href="/projects/hansboathouse/index.html" target="_blank"><button class="btn">Launch!</button></a><a href="https://github.com/jarrodyellets/hansboathouse" target="_blank"><button class="btn">View Code</button></a>
+          <a href="/projects/hansboathouse/index.html" target="_blank"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/hansboathouse" target="_blank"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
       </div>
       <div class="portfolioItem">
@@ -117,7 +117,7 @@
         <div class="built">Built With:</div>
         <p class="builtWith">Node.js, Express.js, HTML5, CSS3, JavaScript, jQuery, and Spotify API</p>
         <div className="buttonWrapper">
-          <a href="https://sheltered-basin-77574.herokuapp.com" target="_blank"><button class="btn">Launch!</button></a><a href="https://github.com/jarrodyellets/topTenJukebox" target="_blank"><button class="btn">View Code</button></a>
+          <a href="https://sheltered-basin-77574.herokuapp.com" target="_blank"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/topTenJukebox" target="_blank"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
       </div>
         <div class="portfolioItem">
@@ -126,7 +126,7 @@
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, jQuery and YouTube API</p>
         <div className="buttonWrapper">
-          <a href="/projects/retroyoutube/index.html" target="_blank"><button class="btn">Launch!</button></a><a href="https://github.com/jarrodyellets/retroYouTube" target="_blank"><button class="btn">View Code</button></a>
+          <a href="/projects/retroyoutube/index.html" target="_blank"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/retroYouTube" target="_blank"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
       </div>
       <div class="portfolioItem">
@@ -135,7 +135,7 @@
         <div class="built">Built With:</div>
         <p class="builtWith">HTML5, CSS3, JavaScript, and jQuery</p>
         <div className="buttonWrapper">
-          <a href="/projects/newspaper/index.html" target="_blank"><button class="btn">Launch!</button></a><a href="https://github.com/jarrodyellets/dynamicNewspaper" target="_blank"><button class="btn">View Code</button></a>
+          <a href="/projects/newspaper/index.html" target="_blank"><button class="btn hvr-underline-from-left">Launch!</button></a><a href="https://github.com/jarrodyellets/dynamicNewspaper" target="_blank"><button class="btn hvr-underline-from-left">View Code</button></a>
         </div>
       </div>
     </div>
